cluster/kasten-io/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k10
  namespace: kasten-io
  annotations:
    nginx.ingress.kubernetes.io/app-root: /k10/
spec:
  ingressClassName: internal
  rules:
  - host: k10.sko.ai
    http:
      paths:
      - backend:
          service:
            name: gateway
            port:
              name: http
        path: /
        pathType: Prefix
